tinkering with collapsing sidebar

--- a/src/html/edu.html
+++ b/src/html/edu.html
@@ -42,7 +42,7 @@
         <nav id="sidebar">
             <div class="sidebar-header">
                 <h3>DisasterMap</h3>
-                <strong>GI4S</strong>
+                <strong class="fas fa-arrows-alt-h"></strong>
             </div>
 
             <ul class="list-unstyled components link-list">
