--- a/src/html/map.html
+++ b/src/html/map.html
@@ -39,13 +39,12 @@
 <body>
     <div class="wrapper">
         <!-- Sidebar  -->
-        <nav id="sidebar">
+        <nav id="sidebar" class="active">
             <div class="sidebar-header">
-                <h3>DisasterMap</h3>
-                <strong class="fas fa-arrows-alt-h"></strong>
+                <img id="header" class="head_img" src="../img/volcano.png" alt="DisasterMap">
             </div>
 
-            <ul class="list-unstyled components link-list">
+            <ul class="list-unstyled components">
                 <li>
                     <a href="./home.html">
                         <i class="fas fa-home"></i>
@@ -60,7 +59,7 @@
                 </li>
                 <li>
                     <a href="./edu.html">
-                        <i class="fas fa-book-dead"></i>
+                        <i class="fas fa-book"></i>
                         Education
                     </a>
                 </li>
@@ -80,8 +79,7 @@
         </nav>
 
         <!-- Page Content  -->
-        <div id="content">
-
+        <div id="content" class="map_parent">
             <div id="map_div"></div>
          </div>
     </div>
