--- a/src/html/about.html
+++ b/src/html/about.html
@@ -23,33 +23,32 @@
 <body>
     <div class="wrapper">
         <!-- Sidebar  -->
-        <nav id="sidebar">
+        <nav id="sidebar" class="active">
             <div class="sidebar-header">
-                <h3>DisasterMap</h3>
-                <strong class="fas fa-arrows-alt-h"></strong>
+                <img id="header" class="head_img" src="../img/volcano.png" alt="DisasterMap">
             </div>
 
-            <ul class="list-unstyled components link-list">
+            <ul class="list-unstyled components">
                 <li>
                     <a href="./home.html">
                         <i class="fas fa-home"></i>
                         Home
                     </a>
                 </li>
-                <li class="active">
-                    <a href="#">
+                <li>
+                    <a href="./map.html">
                         <i class="fas fa-map-marked-alt"></i>
                         Map
                     </a>
                 </li>
                 <li>
                     <a href="./edu.html">
-                        <i class="fas fa-book-dead"></i>
+                        <i class="fas fa-book"></i>
                         Education
                     </a>
                 </li>
-                <li>
-                    <a href="./about.html">
+                <li class="active">
+                    <a href="#">
                         <i class="fas fa-question"></i>
                         About
                     </a>
