--- a/src/html/home.html
+++ b/src/html/home.html
@@ -23,13 +23,12 @@
 <body>
     <div class="wrapper">
         <!-- Sidebar  -->
-        <nav id="sidebar">
+        <nav id="sidebar" class="active">
             <div class="sidebar-header">
-                <h3>DisasterMap</h3>
-                <strong class="fas fa-arrows-alt-h"></strong>
+                <img id="header" class="head_img" src="../img/volcano.png" alt="DisasterMap">
             </div>
 
-            <ul class="list-unstyled components link-list">
+            <ul class="list-unstyled components">
                 <li class="active">
                     <a href="#">
                         <i class="fas fa-home"></i>
@@ -44,7 +43,7 @@
                 </li>
                 <li>
                     <a href="./edu.html">
-                        <i class="fas fa-book-dead"></i>
+                        <i class="fas fa-book"></i>
                         Education
                     </a>
                 </li>
