--- a/src/html/map.html
+++ b/src/html/map.html
@@ -92,6 +92,7 @@
         crossorigin="anonymous"></script>
 
     <script src="../js/map_setup.js"></script>
+    <script src="../js/calculateDangerousPaths.js"></script>
     <script src="../js/ui.js"></script>
 
 </body>
