--- a/src/html/about.html
+++ b/src/html/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A layout example with a side menu that hides on mobile, just like the Pure website.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Geoinformation for Iceland</title>
+    <title>DisasterMap</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -92,8 +92,6 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-
-    <script src="../js/ui.js"></script>
 
 </body>
 
