--- a/src/html/edu.html
+++ b/src/html/edu.html
@@ -7,11 +7,12 @@
     <meta name="description" content="A layout example with a side menu that hides on mobile, just like the Pure website.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Geoinformation for Iceland</title>
+    <title>DisasterMap</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+        crossorigin="anonymous">
+
     <!-- Import Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
         crossorigin="" />
@@ -79,9 +80,10 @@
         </nav>
 
         <!-- Page Content  -->
-        <div id="content">
+        <div id="content" class="bg">
 
-           <iframe width="800" height="2686" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://create.piktochart.com/embed/35429521-untitled-infographic" ></iframe>
+            <iframe width="100%" height="2686" scrolling="no" src="https://create.piktochart.com/embed/35429521-untitled-infographic"></iframe>
+
         </div>
     </div>
 
@@ -91,9 +93,6 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-
-    <script src="../js/map_setup.js"></script>
-    <script src="../js/ui.js"></script>
 
 </body>
 
