--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -67,7 +67,7 @@
             <i class="fab fa-github" id="git_icon"></i>
             <a href="https://github.com/sholtkamp/GI_Iceland" id="git_link">  GitHub Repository</a>
             <br><br>
-            <div id="credit_header">Credits:</div>
+            <div class="header">Credits:</div>
             <a href="https://github.com/SarahLechler" class="credit">Sarah Lechler</a>
             <br>
             <a href="https://github.com/SHoltkamp" class="credit">Sebastian Holtkamp</a>
