--- a/src/html/home.html
+++ b/src/html/home.html
@@ -65,7 +65,7 @@
         <!-- Page Content  -->
         <div id="content" class="bg">
 
-            <h id="home_header">Welcome to DisasterMap.org!</h>
+            <h class="header">Welcome to DisasterMap.org!</h>
             <br><br>
             <a class="twitter-timeline" height="90%" data-lang="en" data-theme="dark" style="height:100px" href="https://twitter.com/MapDisaster/lists/volcanonews?ref_src=twsrc%5Etfw">A Twitter List by MapDisaster</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
