--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -10,8 +10,9 @@
     <title>DisasterMap</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-  
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+        crossorigin="anonymous">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
@@ -65,18 +66,20 @@
         <!-- Page Content  -->
         <div id="content" class="bg">
             <i class="fab fa-github" id="git_icon"></i>
-            <a href="https://github.com/sholtkamp/GI_Iceland" id="git_link">  GitHub Repository</a>
+            <a href="https://github.com/sholtkamp/GI_Iceland" id="git_link"> GitHub Repository</a>
             <br><br>
-            <div class="header">Credits:</div>
-            <a href="https://github.com/SarahLechler" class="credit">Sarah Lechler</a>
-            <br>
-            <a href="https://github.com/SHoltkamp" class="credit">Sebastian Holtkamp</a>
-            <br>
-            <a href="https://github.com/Ruban181211" class="credit">Rubankumar Moorthy</a>
-            <br>
-            <a href="https://github.com/H-CLindner" class="credit">Hans-Christian Lindner</a>
-            <br>
-            <a href="https://github.com/Kirubamoh" class="credit">Kirubamohan Nanjappan</a>
+            <div style="padding-left: 10px">
+                <div class="header">Credits:</div>
+                <a href="https://github.com/SarahLechler" class="credit">Sarah Lechler</a>
+                <br>
+                <a href="https://github.com/SHoltkamp" class="credit">Sebastian Holtkamp</a>
+                <br>
+                <a href="https://github.com/Ruban181211" class="credit">Rubankumar Moorthy</a>
+                <br>
+                <a href="https://github.com/H-CLindner" class="credit">Hans-Christian Lindner</a>
+                <br>
+                <a href="https://github.com/Kirubamoh" class="credit">Kirubamohan Nanjappan</a>
+            </div>
         </div>
     </div>
 
