--- a/src/html/home.html
+++ b/src/html/home.html
@@ -10,8 +10,9 @@
     <title>DisasterMap</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+        crossorigin="anonymous">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
@@ -63,11 +64,14 @@
         </nav>
 
         <!-- Page Content  -->
-        <div id="content" class="bg">
-
+        <div id="content" class="bg" >
             <h class="header">Welcome to DisasterMap.org!</h>
             <br><br>
-            <a class="twitter-timeline" height="90%" data-lang="en" data-theme="dark" style="height:100px" href="https://twitter.com/MapDisaster/lists/volcanonews?ref_src=twsrc%5Etfw">A Twitter List by MapDisaster</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <div style="max-width: 60%; height:90%" >
+                <a class="twitter-timeline" height="99%" data-lang="en" data-theme="dark" style="height:100px" href="https://twitter.com/MapDisaster/lists/volcanonews?ref_src=twsrc%5Etfw">A
+                    Twitter List by MapDisaster</a>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
         </div>
     </div>
 
